fix(popup): Fix content popup layout breaking due to leaking button styles
The content popup layout would overlap when position absolute was applied to the button (coming from integration CSS). Added css rules to ensure it remains not-absolutely positioned. Closes #1415.

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -24,6 +24,11 @@
   display: none;
 }
 
+.toggl-button-edit-form-button, #toggl-button-edit-form .toggl-button-edit-form-button {
+  display: inline-block !important;
+  position: initial !important;
+}
+
 .toggl-button {
   display: inline-block !important;
   user-select: none;
